fix VeronikaService