@@ -6,7 +6,6 @@ import ru.evsmanko.mankoff.entity.Credit;
 import ru.evsmanko.mankoff.repository.CreditRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -15,13 +14,16 @@ public class VeronikaServiceImpl implements VeronikaService {
     private final CreditRepository creditRepository;
 
     @Override
-    public double calculateCreditByUser(long id) {
+    public Double calculateCreditByUser(long id) {
         List<Credit> credit = creditRepository.findAllByUserId(id);
-        List<Double> AmountList = credit.stream().map(Credit::getAmount).collect(Collectors.toList());
-        double sum = 0;
-        for (int i = 0; i < AmountList.size(); i++) {
-            sum += AmountList.get(i);
+        List<Double> amountList = credit.stream().map(Credit::getAmount).toList();
+        if (!credit.isEmpty()) {
+            Double sum = (double) 0;
+            for (int i = 0; i < amountList.size(); i++) {
+                sum += amountList.get(i);
+            }
+            return sum;
         }
-        return sum;
+        return null;
     }
 }
